# edifact_parser

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs
tests/: conftest.py  test_builder.py  test_order.py  test_parser.py
