[package]
name = "edifact_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "edifact_parser"
crate-type = ["cdylib"]

[dev-dependencies]
pretty_assertions = "1.4.1"
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }

[dependencies.pyo3]
version = "0.23.4"

[features]
extension-module = ["pyo3/extension-module"]

